处理CSRF，初步处理登录验证

--- a/templates/views/login.html
+++ b/templates/views/login.html
@@ -1,7 +1,6 @@
 {{ template "single" }}
 {{ define "content" }}
 <form class="card" action="" method="post">
-
 	<div class="card-body p-6">
 		<div class="card-title">Login to your account</div>
 
@@ -24,6 +23,7 @@
 		</div>
 
 		<div class="form-footer">
+			<input type="hidden" id="csrf" value="{{ .csrf }}">
 			<button type="submit" class="btn btn-primary btn-block">Sign in</button>
 		</div>
 	</div>
