--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
-<title>{{ .page.title }}</title>
+<title>{{ block "title" . }}Default Title{{ end }}</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
@@ -26,5 +26,5 @@
         baseUrl: '.'
     });
 </script>
-{{ template "special" . }}
+{{ block "special" . }}{{ end }}
 {{ end }}
