--- a/templates/views/login.html
+++ b/templates/views/login.html
@@ -1,19 +1,33 @@
 {{ template "single" }}
+{{ define "special" }}
+	<!-- Dashboard Core -->
+	<link href="./assets/css/dashboard.css" rel="stylesheet" />
+	<script src="./assets/js/dashboard.js"></script>
+	<!-- c3.js Charts Plugin -->
+	<link href="./assets/plugins/charts-c3/plugin.css" rel="stylesheet" />
+	<script src="./assets/plugins/charts-c3/plugin.js"></script>
+	<!-- Google Maps Plugin -->
+	<link href="./assets/plugins/maps-google/plugin.css" rel="stylesheet" />
+	<script src="./assets/plugins/maps-google/plugin.js"></script>
+	<!-- Input Mask Plugin -->
+	<script src="./assets/plugins/input-mask/plugin.js"></script>
+{{ end }}
+
 {{ define "content" }}
-<form class="card" action="" method="post">
+<form class="card">
 	<div class="card-body p-6">
 		<div class="card-title">Login to your account</div>
 
 		<div class="form-group">
 			<label class="form-label">Email address</label>
-			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			<input type="input" class="form-control" id="user" aria-describedby="emailHelp" placeholder="Enter user name">
 		</div>
 		<div class="form-group">
 			<label class="form-label">
 				Password
 				<a href="/forgot-password.html" class="float-right small">I forgot password</a>
 			</label>
-			<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			<input type="password" class="form-control" id="password" placeholder="Password">
 		</div>
 		<div class="form-group">
 			<label class="custom-control custom-checkbox">
@@ -23,8 +37,8 @@
 		</div>
 
 		<div class="form-footer">
-			<input type="hidden" id="csrf" value="{{ .csrf }}">
-			<button type="submit" class="btn btn-primary btn-block">Sign in</button>
+			<input type="input" id="fcsrf" value="{{ .csrf }}">
+			<button type="button" id="submit" class="btn btn-primary btn-block">Sign in</button>
 		</div>
 	</div>
 </form>
@@ -32,4 +46,29 @@
 <div class="text-center text-muted">
 	Don't have account yet? <a href="/register.html">Sign up</a>
 </div>
+<script type="text/javascript">
+requirejs(['jquery'], function ($) {
+	$("#submit").click(function () {
+		$.ajax({
+			type: "POST",
+			url: "/login.html",
+			data: {
+				user: $("#user").val(),
+				password: $("#password").val()
+			},
+			beforeSend: function (xhr) {
+				xhr.setRequestHeader("X-CSRF-Token", $("#fcsrf").val());
+			},
+			async: false,
+			cache: false,
+			success: function (data) {
+				window.location.href = "/index.html";
+			},
+			error: function (xhr, status, text) {
+				alert("Wrong login name or password.");
+			}
+		});
+	});
+})
+</script>
 {{ end }}
